--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,11 +1,13 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d build",
   "homepage": "https://guru-raj.github.io/portfolio",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,9 +15,16 @@
     "@types/node": "^16.18.4",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "animate.css": "^4.1.1",
+    "gsap-trial": "^3.11.3",
+    "loaders.css": "^0.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.0",
+    "react-loaders": "^3.0.1",
+    "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "sass": "^1.56.1",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
@@ -23,7 +32,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
